--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     color: white;
     font-family: 'Poppins', sans-serif;
 }
 
-.bg{
+.bg {
     background-color: #2EA13D;
     width: 100%;
     height: 100%;
@@ -16,7 +16,7 @@
     flex-direction: column;
 }
 
-.main{
+.main {
     margin-top: 5%;
     background-color: #58b464;
     width: 80%;
@@ -25,41 +25,49 @@
 
     display: flex;
     flex-direction: column;
- 
+
 }
 
-.main .find{
+.main .find {
     margin-top: 10px;
     align-self: center;
     margin-bottom: 15px;
 }
 
-.main .find .search{
+.main .find .search {
     width: 30rem;
     height: 2rem;
     border-radius: 14px;
     border: 1px transparent;
     outline: none;
-    color: black ;
+    color: black;
 }
 
-.main .find .sc{
+.main .find .sc {
     position: relative;
     top: 2px;
     right: 30px;
     font-size: 20px;
     color: #58b464;
+    cursor: pointer;
+
+    transition: ease-in-out 0.5s;
 }
 
-.main .time{
+.main .find .sc:hover{
+    color: #2EA13D;
+    transform: scale(1.1);
+}
+
+.main .time {
     text-align: left;
     margin-left: 15px;
-    
+
     font-size: 38px;
     margin-bottom: 15px;
 }
 
-.main .center{
+.main .center {
     margin-top: 15px;
     align-self: center;
     position: relative;
@@ -67,33 +75,24 @@
 
 }
 
-.main .center img{
+.main .center img {
     width: 400px;
 }
 
-.main .weather{
+.main .weather {
     margin-top: 15px;
     margin-right: 12px;
     text-align: right;
 }
 
-.main .weather h4{
+.main .weather h4 {
     font-size: 32px;
 }
 
-.main .weather h1{
+.main .weather h1 {
     font-size: 52px;
 }
 
-.main .weather h2{
+.main .weather h2 {
     font-size: 82px;
 }
-
-
-
-
-
-
-
-
-
