--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
     color: white;
     font-family: 'Poppins', sans-serif;
 }
+
+
 
 .bg {
     background-color: #2EA13D;
@@ -48,14 +51,14 @@
     top: 2px;
     right: 30px;
     font-size: 20px;
-    color: #58b464;
+    color: rgb(121, 120, 120);
     cursor: pointer;
 
     transition: ease-in-out 0.5s;
 }
 
 .main .find .sc:hover{
-    color: #2EA13D;
+    color: rgb(44, 44, 44);
     transform: scale(1.1);
 }
 
@@ -98,4 +101,27 @@
 
 .main .weather h2 {
     font-size: 82px;
+}
+
+/* Cores para temperatura baixa */
+.temperatura-baixa-cor1 {
+    background-color: #197eae;
+}
+.temperatura-baixa-cor2 {
+    background-color: #4798be;
+}
+/* Cores para temperatura moderada */
+.temperatura-moderada-cor1 {
+    background-color: #2EA13D;
+}
+.temperatura-moderada-cor2 {
+    background-color: #58b464;  
+}
+
+/* Cores para temperatura alta */
+.temperatura-alta-cor1 {
+    background-color: #CB170D;
+}
+.temperatura-alta-cor2 {
+    background-color: #d5453d; 
 }
